<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout tools:context=".activity.MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/myBackground"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/nameText"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/nameText"
        android:textColor="@color/black"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/nameHint"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:inputType="text"
        android:hint="@string/nameHint"/>

    <TextView
        android:textColor="@color/black"
        android:id="@+id/couplesText"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/couplesText"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/couplesHint"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:inputType="number"
        android:hint="@string/couplesHint"/>

    <Button
        android:id="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startGame"
        android:onClick="startGame"
        />

    <Button
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:onClick="ranking"
        />

</LinearLayout>